processed/gerrit/txt_full/59418.txt
Change:     59418
Subject:    LU-17848 osd: dt_tunables_fini() and friends return void
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/59418
Change-Id:  I5edc7ed43fad69d6ebdd734d8e9fdc69cdcf0915
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Timothy Day
Created:    2025-05-25 05:46:47.000000000
Updated:    2025-06-12 06:36:45.000000000
Patch Set:  3
Insertions: +10
Deletions:  -18
Comments:   2 (0 unresolved)

--- Labels ---
  Code-Review: Lijing Chen: +1; Andreas Dilger: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Qian Yingjin, Timothy Day, Lijing Chen

--- Commit Message ---
LU-17848 osd: dt_tunables_fini() and friends return void

The function dt_tunables_fini() can't really fail. Make
it return void. Make the various osd_procfs_fini()
implementations also return void.

Test-Parameters: trivial
Test-Parameters: trivial fstype=zfs
Signed-off-by: Timothy Day <timday@amazon.com>
Change-Id: I5edc7ed43fad69d6ebdd734d8e9fdc69cdcf0915
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/59418
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Lijing Chen <lijinc@amazon.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Timothy Day, 2025-05-25 05:46:47.000000000) ---
Uploaded patch set 1.

--- Message (Lustre Gerrit Janitor, 2025-05-25 05:49:26.000000000) ---
Patch Set 1:

(1 comment)

centos7: Compile failed

rocky8.10: Compile failed


 Job output URL: https://testing.whamcloud.com/gerrit-janitor/51936/results.html

--- Message (wc-checkpatch, 2025-05-25 05:51:03.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-05-25 05:52:59.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

 make[4]: *** [scripts/Makefile.build:249: /home/green/git/lustre-release/lustre/osd-zfs/osd_handler.o] Error 1
make[3]: *** [scripts/Makefile.build:478: /home/green/git/lustre-release/lustre/osd-zfs] Error 2
make[2]: *** [scripts/Makefile.build:478: /home/green/git/lustre-release/lustre] Error 2
make[1]: *** [Makefile:1944: /home/green/git/lustre-release] Error 2
make: *** [autoMakefile:1232: modules] Error 2
 /home/green/git/lustre-release/lustre/osd-zfs/osd_handler.c: In function ‘osd_device_fini’:
 /home/green/git/lustre-release/lustre/osd-zfs/osd_handler.c:1312:13: error: unused variable ‘rc’ [-Werror=unused-variable]
  1312 |         int rc;
       |             ^~

--- Message (Timothy Day, 2025-05-25 06:09:16.000000000) ---
Uploaded patch set 2.

--- Message (jenkins, 2025-05-25 06:09:18.000000000) ---
Patch Set 1:

No Builds Executed

--- Message (jenkins, 2025-05-25 06:09:20.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/113690/ : ABORTED

--- Message (wc-checkpatch, 2025-05-25 06:11:38.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2025-05-25 06:13:04.000000000) ---
Patch Set 2:

(1 comment)

Builds for x86_64 centos7,rocky8.10 successful
Job output URL: https://testing.whamcloud.com/gerrit-janitor/51940/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-05-25 06:13:10.000000000) ---
Patch Set 2:

Code-wise looks good to me.

--- Message (Lustre Gerrit Janitor, 2025-05-25 06:24:49.000000000) ---
Patch Set 2:

Initial testing succeeded.

Succeeded:
- runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/51940/results.html
Commencing standard testing: 
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity4@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity4@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single1@ldiskfs+DNE replay-single1@zfs replay-single2@ldiskfs+DNE replay-single2@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity3@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity3@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs

--- Message (jenkins, 2025-05-25 07:04:40.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/113694/ : SUCCESS

--- Message (Maloo, 2025-05-25 07:06:56.000000000) ---
Patch Set 2:

The following sessions will be run for build 113694 patch 2

Enforced:
- review-ldiskfs-dne on el8.10-x86_64/ldiskfs servers and clients
- review-ldiskfs-dne on el9.5-x86_64/ldiskfs servers and clients
- review-dne-part-1 on el8.10-x86_64/zfs servers and clients

Maloo Test Queue: https://testing.whamcloud.com/test_queue?jobs=lustre-reviews&builds=113694&commit=Apply+Filter
Maloo Results: https://testing.whamcloud.com/test_sessions/related?jobs=lustre-reviews&builds=113694#redirect

--- Message (Lustre Gerrit Janitor, 2025-05-25 09:09:50.000000000) ---
Patch Set 2:

Even though "Test-Parameters: trivial" was detected, this deeply suspicious bot still run some testing

Testing has completed with errors!

> conf-sanity3@ldiskfs+DNE Timeout(9582s)
> lustre-rsync-test@zfs Timeout(1034s)
> sanity-dom@ldiskfs+DNE Timeout(1210s)
> sanity-lfsck@ldiskfs+DNE Timeout(2508s)
> sanity-pcc@ldiskfs+DNE Timeout(2001s)

Succeeded:
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity4@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity4@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single1@ldiskfs+DNE replay-single1@zfs replay-single2@ldiskfs+DNE replay-single2@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity3@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity3@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@zfs sanity-lnet@zfs sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/51940/results.html

--- Message (Maloo, 2025-05-25 12:29:46.000000000) ---
Patch Set 2: Verified+1

Passed enforced test review-dne-part-1 on RHEL 8.10 / x86_64 uploaded by Trevis Autotest from trevis-97vm1: https://testing.whamcloud.com/test_sessions/39e7e5b8-0086-4612-88c9-dd57d3876c53 ran 3 tests.

--- Message (Andreas Dilger, 2025-05-26 23:05:32.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Lijing Chen, 2025-06-03 20:58:51.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Oleg Drokin, 2025-06-12 06:36:41.000000000) ---
Patch Set 2: Code-Review+2

--- Message (Oleg Drokin, 2025-06-12 06:36:45.000000000) ---
Change has been successfully cherry-picked as e53f207ab4c1b366936ca883e0bb3ff60e8c7a02 by Oleg Drokin
